# fastEIT

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: fastEIT_tasks.csv  learning_journal.md
.github/workflows/: build.yml  lint.yml  test.yml
docs/: data_model.md  eidors_analysis.md  eit_format.md  parsers.md  parsing_layer.md  reconstruction.md
docs/reverse_eng/: draeger_bin_format.ipynb  eit_format.ipynb
notebooks/: 01_real_data_verification.ipynb  02_benchmark_parsing.ipynb  03_eit_parser_validation.ipynb  04_ml_reconstruction.ipynb
src/fasteit/: __init__.py  config.py  dtypes.py
src/fasteit/export/: __init__.py  dataframe.py
src/fasteit/features/: __init__.py  clinical.py
src/fasteit/models/: __init__.py  base_data.py  bin_data.py  breath.py  continuous_data.py  peep_step.py  raw_impedance_data.py  reconstructed_data.py  session.py  study.py
src/fasteit/parsers/: __init__.py  base.py  bin_formats.py  bin_parser.py  csv_parser.py  detection.py  eit_parser.py  errors.py  header_formats.py  loader.py
src/fasteit/preprocessing/: __init__.py  breath_detection.py  filtering.py  lung_mask.py
src/fasteit/reconstruction/: __init__.py  build_dataset.py  data_prep.py  metrics.py  (+1 more)
tests/: conftest.py  test_base_data.py  test_base_parser.py  test_bin_data.py  test_bin_parser.py  test_bin_utils.py  test_config.py  test_draeger_asc_parser.py  test_draeger_bin_dtypes.py  test_dtypes.py  test_eit_dtypes.py  test_eit_parser.py  test_header_formats.py  test_parser_routing.py  test_placeholder.py  test_reconstructed_data.py  test_timpel_dtypes.py  test_timpel_parser.py
tests/models/: test_base_data.py
tests/parsers/: test_base_parser.py  test_header_formats.py
tests/reconstruction/: test_data_prep.py  test_metrics.py  test_ridge_model.py
(+19 files in other folders)
