[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fasteit"
version = "0.1.0.dev0"
description = "EIT data parsing, preprocessing, and clinical feature extraction for Dräger PulmoVista"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["EIT", "electrical impedance tomography", "mechanical ventilation", "clinical", "ICU"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "pyarrow>=12.0",
    "matplotlib>=3.7",
    "h5py>=3.8",
]

[project.optional-dependencies]
pyeit = [
    "pyeit>=1.0",
]
reconstruction = [
    "scikit-learn>=1.3",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "coverage[toml]>=7.3",
]

[project.urls]
Repository = "https://github.com/Kernel236/fastEIT"

[tool.hatch.build.targets.wheel]
packages = ["src/fasteit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "octave: marks tests requiring Octave/MATLAB for cross-validation",
]

[tool.coverage.run]
source = ["src/fasteit"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
